feat(db): use drizzle

--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
   "engines": {
     "bun": ">=1.2.10",
     "node": ">=22.14.0"
+  },
+  "dependencies": {
+    "@neondatabase/serverless": "^1.0.0"
   }
 }
