--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -23,6 +23,7 @@
   },
   "prettier": "@yuki/prettier-config",
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.0",
     "drizzle-orm": "^0.42.0"
   },
   "devDependencies": {
