--- a/packages/db/turbo.json
+++ b/packages/db/turbo.json
@@ -1,5 +1,9 @@
 {
   "$schema": "../../node_modules/turbo/schema.json",
   "extends": ["//"],
-  "tasks": {}
+  "tasks": {
+    "build": {
+      "outputs": ["dist/**"]
+    }
+  }
 }
