--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -2,5 +2,5 @@
   "extends": "@yuki/tsconfig/internal-package.json",
   "compilerOptions": {},
   "include": ["src", "drizzle.config.ts"],
-  "exclude": ["node_modules", "src/generated"]
+  "exclude": ["node_modules"]
 }
