chore(auth): handle proxy

--- a/.env.example
+++ b/.env.example
@@ -18,8 +18,6 @@ DISCORD_CLIENT_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
-# Web URL for proxy redirection in native app
-NEXT_PUBLIC_WEB_URL=
-
-# The EAS project ID is used to identify your project in Expo Application Services (EAS)
-EAS_PROJECT_ID=
+# The URL of the auth proxy server - only needed for local development
+# Used to redirect OAuth authentication requests to production and handle callback redirects
+AUTH_PROXY_URL=
