--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,7 @@ node_modules
 # testing
 coverage
 
-# drizzle
-drizzle/
-
-# prisma
-generated/
+# database
 migrations/
 
 # next.js
@@ -27,9 +23,9 @@ next-env.d.ts
 # expo
 .expo/
 expo-env.d.ts
-apps/expo/.gitignore
-apps/expo/ios
-apps/expo/android
+apps/native/.gitignore
+apps/native/ios
+apps/native/android
 
 # react router
 .react-router/
