--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -8,11 +8,15 @@
     ".": {
       "types": "./dist/index.d.ts",
       "default": "./src/index.ts"
+    },
+    "./schema": {
+      "types": "./dist/schema/index.d.ts",
+      "default": "./src/schema/index.ts"
     }
   },
   "scripts": {
     "build": "tsc",
-    "clean": "git clean -xdf .cache .turbo dist drizzle node_modules",
+    "clean": "git clean -xdf .cache .turbo dist node_modules",
     "db:push": "bun with-env drizzle-kit push",
     "db:studio": "bun with-env drizzle-kit studio",
     "dev": "tsc --watch",
