--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -27,6 +27,7 @@
   },
   "prettier": "@yuki/prettier-config",
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.0",
     "drizzle-orm": "^0.43.0"
   },
   "devDependencies": {
