feat(db): migrate to prisma

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bump-deps": "bunx --bun npm-check-updates --deep -u -x react-day-picker && bun install",
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo run clean",
+    "db:generate": "turbo -F @yuki/db db:generate",
     "db:push": "turbo -F @yuki/db db:push",
     "db:studio": "turbo -F @yuki/db db:studio",
     "dev": "turbo watch dev --continue",
