--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -6,38 +6,31 @@
   "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
       "default": "./src/index.ts"
-    },
-    "./schema": {
-      "types": "./dist/schema/index.d.ts",
-      "default": "./src/schema/index.ts"
     }
   },
   "scripts": {
-    "build": "tsc",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
-    "db:push": "bun with-env drizzle-kit push",
-    "db:studio": "bun with-env drizzle-kit studio",
-    "dev": "tsc --watch",
+    "db:generate": "bun with-env prisma generate",
+    "db:push": "bun with-env prisma db push",
+    "db:studio": "bun with-env prisma studio",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
-    "typecheck": "tsc --noEmit --emitDeclarationOnly false",
     "with-env": "dotenv -e ../../.env --"
   },
   "prettier": "@yuki/prettier-config",
   "dependencies": {
-    "@neondatabase/serverless": "^1.0.0",
-    "drizzle-orm": "^0.43.1"
+    "@prisma/adapter-neon": "^6.6.0",
+    "@prisma/client": "^6.6.0"
   },
   "devDependencies": {
     "@yuki/eslint-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
     "@yuki/tsconfig": "workspace:*",
     "dotenv-cli": "^8.0.0",
-    "drizzle-kit": "^0.31.0",
     "eslint": "latest",
     "prettier": "latest",
+    "prisma": "^6.6.0",
     "typescript": "latest"
   }
 }
