feat: done migrate

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -10,6 +10,7 @@
     }
   },
   "scripts": {
+    "build": "bun with-env prisma generate",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "db:generate": "bun with-env prisma generate",
     "db:push": "bun with-env prisma db push",
