--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -15,6 +15,8 @@
   },
   "prettier": "@yuki/prettier-config",
   "dependencies": {
+    "@orpc/client": "^1.1.0",
+    "@orpc/react-query": "^1.1.0",
     "@tanstack/react-query": "^5.74.4",
     "@trpc/client": "^11.1.1",
     "@trpc/tanstack-react-query": "^11.1.1",
