--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -20,7 +20,7 @@
   },
   "prettier": "@yuki/prettier-config",
   "dependencies": {
-    "@trpc/server": "^11.1.1",
+    "@orpc/server": "^1.1.0",
     "@yuki/auth": "workspace:*",
     "@yuki/db": "workspace:*",
     "@yuki/validators": "workspace:*",
