--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -15,11 +15,11 @@
   "prettier": "@yuki/prettier-config",
   "dependencies": {
     "@expo-google-fonts/geist": "^0.3.1",
+    "@orpc/client": "^1.1.0",
+    "@orpc/react-query": "^1.1.0",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@tanstack/react-query": "^5.74.4",
-    "@trpc/client": "^11.1.1",
-    "@trpc/tanstack-react-query": "^11.1.1",
     "@yuki/api": "workspace:*",
     "@yuki/auth": "workspace:*",
     "expo": "~53.0.0-preview.7",
@@ -37,8 +37,7 @@
     "react-native-gesture-handler": "~2.25.0",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
-    "superjson": "^2.2.2"
+    "react-native-screens": "~4.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
