--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -18,8 +18,6 @@
     "@orpc/client": "^1.1.0",
     "@orpc/react-query": "^1.1.0",
     "@tanstack/react-query": "^5.74.4",
-    "@trpc/client": "^11.1.1",
-    "@trpc/tanstack-react-query": "^11.1.1",
     "@yuki/api": "workspace:*",
     "@yuki/auth": "workspace:*",
     "@yuki/db": "workspace:*",
@@ -28,8 +26,7 @@
     "@yuki/validators": "workspace:*",
     "next": "15.3.1",
     "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "superjson": "^2.2.2"
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
