--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -23,8 +23,7 @@
     "@orpc/server": "^1.1.0",
     "@yuki/auth": "workspace:*",
     "@yuki/db": "workspace:*",
-    "@yuki/validators": "workspace:*",
-    "superjson": "^2.2.2"
+    "@yuki/validators": "workspace:*"
   },
   "devDependencies": {
     "@yuki/eslint-config": "workspace:*",
