--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -30,6 +30,7 @@
     "superjson": "^2.2.2"
   },
   "devDependencies": {
+    "@prisma/nextjs-monorepo-workaround-plugin": "^6.6.0",
     "@tailwindcss/postcss": "^4.1.4",
     "@types/node": "22.15.2",
     "@types/react": "19.1.2",
