--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -25,6 +25,7 @@
     "@yuki/ui": "workspace:*",
     "@yuki/validators": "workspace:*",
     "next": "15.3.1",
+    "nuqs": "^2.4.3",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
