--- a/apps/react-router/package.json
+++ b/apps/react-router/package.json
@@ -25,6 +25,7 @@
     "@yuki/ui": "workspace:*",
     "@yuki/validators": "workspace:*",
     "isbot": "^5.1.27",
+    "nuqs": "^2.4.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router": "^7.5.2",
