--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -15,23 +15,23 @@
   "prettier": "@yuki/prettier-config",
   "dependencies": {
     "@expo-google-fonts/geist": "^0.3.1",
-    "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.6",
-    "@tanstack/react-query": "^5.74.11",
+    "@react-navigation/elements": "^2.4.0",
+    "@react-navigation/native": "^7.1.7",
+    "@tanstack/react-query": "^5.75.1",
     "@trpc/client": "^11.1.2",
     "@trpc/tanstack-react-query": "^11.1.2",
     "@yuki/api": "workspace:*",
     "@yuki/auth": "workspace:*",
-    "expo": "~53.0.0-preview.7",
-    "expo-constants": "~17.1.1",
-    "expo-dev-client": "^5.0.20",
-    "expo-linking": "~7.1.1",
-    "expo-router": "~5.0.2-preview.3",
-    "expo-secure-store": "~14.2.0",
-    "expo-splash-screen": "~0.30.2",
-    "expo-status-bar": "~2.2.0",
-    "expo-web-browser": "~14.1.2",
-    "lucide-react-native": "^0.503.0",
+    "expo": "~53.0.6",
+    "expo-constants": "~17.1.5",
+    "expo-dev-client": "^5.1.8",
+    "expo-linking": "~7.1.4",
+    "expo-router": "~5.0.5",
+    "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.1.6",
+    "lucide-react-native": "^0.507.0",
     "react": "19.0.0",
     "react-native": "0.79.1",
     "react-native-gesture-handler": "~2.25.0",
@@ -41,9 +41,9 @@
     "superjson": "^2.2.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.10",
-    "@babel/preset-env": "^7.26.9",
-    "@babel/runtime": "^7.27.0",
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.1",
+    "@babel/runtime": "^7.27.1",
     "@types/babel__core": "^7.20.5",
     "@types/react": "19.1.2",
     "@yuki/eslint-config": "workspace:*",
