chore(typescript): add some options

--- a/apps/nextjs/tsconfig.json
+++ b/apps/nextjs/tsconfig.json
@@ -2,10 +2,7 @@
   "extends": "@yuki/tsconfig/nextjs.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": {
-      "@/*": ["./*"],
-      "@yuki/ui/*": ["../../packages/ui/src/*"]
-    }
+    "paths": { "@/*": ["./*"] }
   },
   "include": [".", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
