refractor: make it better

--- a/apps/nextjs/turbo.json
+++ b/apps/nextjs/turbo.json
@@ -6,9 +6,6 @@
       "dependsOn": ["^build"],
       "outputs": [".next/**", "!.next/cache/**", "next-env.d.ts"]
     },
-    "dev": {
-      "with": ["@yuki/api#dev"],
-      "persistent": true
-    }
+    "dev": { "persistent": true }
   }
 }
