--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "build": "turbo run build",
-    "bump-deps": "bunx --bun npm-check-updates --deep -u && bun install",
+    "bump-deps": "bunx --bun npm-check-updates --deep -u '/^(?!react).*$/' && bun install",
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo run clean",
     "db:push": "turbo -F @yuki/db db:push",
@@ -33,7 +33,7 @@
     "@yuki/tsconfig": "workspace:*",
     "turbo": "^2.5.3"
   },
-  "packageManager": "bun@1.2.13",
+  "packageManager": "bun@1.2.0",
   "engines": {
     "bun": ">=1.2.0",
     "node": ">=22.0.0"
