--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -32,7 +32,7 @@
     "@yuki/tsconfig": "workspace:*",
     "eslint": "latest",
     "prettier": "latest",
-    "tsdown": "^0.11.9",
+    "tsdown": "latest",
     "typescript": "latest"
   }
 }
