--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -38,7 +38,7 @@
     "@yuki/tsconfig": "workspace:*",
     "eslint": "latest",
     "prettier": "latest",
-    "tsdown": "^0.11.9",
+    "tsdown": "latest",
     "typescript": "latest"
   }
 }
