--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -46,8 +46,8 @@
     "@yuki/tsconfig": "workspace:*",
     "eslint": "latest",
     "prettier": "latest",
-    "tailwindcss": "^4.1.6",
-    "tsdown": "^0.11.9",
+    "tailwindcss": "latest",
+    "tsdown": "latest",
     "tw-animate-css": "^1.2.9",
     "typescript": "latest"
   }
