--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -7,18 +7,18 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "react-server": "./dist/index.rsc.js",
-      "default": "./dist/index.js"
+      "react-server": "./src/index.rsc.ts",
+      "default": "./src/index.ts"
     },
     "./react": {
       "types": "./dist/react.d.ts",
-      "default": "./dist/react.js"
+      "default": "./src/react.tsx"
     }
   },
   "scripts": {
-    "build": "tsdown",
+    "build": "tsc",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
-    "dev": "tsdown --watch",
+    "dev": "tsc --watch",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
@@ -38,7 +38,6 @@
     "@yuki/tsconfig": "workspace:*",
     "eslint": "latest",
     "prettier": "latest",
-    "tsdown": "latest",
     "typescript": "latest"
   }
 }
