--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "@yuki/tsconfig/internal-package.json",
-  "compilerOptions": {},
+  "compilerOptions": {
+    "rootDir": "src"
+  },
   "include": ["src"],
   "exclude": ["node_modules"]
 }
