--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,24 +5,24 @@
   "license": "MIT",
   "type": "module",
   "exports": {
-    ".": {
+    "./utils": {
       "types": "./dist/utils.d.ts",
-      "default": "./dist/utils.js"
+      "default": "./src/utils.ts"
     },
     "./*": {
       "types": "./dist/components/*.d.ts",
-      "default": "./dist/components/*.js"
+      "default": "./src/components/*.tsx"
     },
     "./hooks/*": {
       "types": "./dist/hooks/*.d.ts",
-      "default": "./dist/hooks/*.js"
+      "default": "./src/hooks/*.ts"
     },
-    "./tailwind.css": "./dist/tailwind.css"
+    "./tailwind.css": "./src/tailwind.css"
   },
   "scripts": {
-    "build": "tsdown",
+    "build": "tsc",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
-    "dev": "tsdown --watch",
+    "dev": "tsc --watch",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
@@ -34,7 +34,7 @@
     "@standard-schema/spec": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.510.0",
+    "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
     "react": "19.0.0",
     "sonner": "^2.0.3",
@@ -47,8 +47,7 @@
     "eslint": "latest",
     "prettier": "latest",
     "tailwindcss": "latest",
-    "tsdown": "latest",
-    "tw-animate-css": "^1.2.9",
+    "tw-animate-css": "^1.3.0",
     "typescript": "latest"
   }
 }
