--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@yuki/tsconfig/react-library.json",
   "compilerOptions": {
     "rootDir": "src",
+    "emitDeclarationOnly": false,
     "baseUrl": ".",
     "paths": { "@yuki/ui/*": ["./src/*"] }
   },
