--- a/packages/validators/tsconfig.json
+++ b/packages/validators/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "@yuki/tsconfig/internal-package.json",
   "compilerOptions": {
-    "rootDir": "src"
+    "rootDir": "src",
+    "emitDeclarationOnly": false
   },
   "include": ["src"],
   "exclude": ["node_modules"]
