--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clean:workspaces": "turbo run clean",
     "db:push": "turbo -F @yuki/db db:push",
     "db:studio": "turbo -F @yuki/db db:studio",
-    "dev": "turbo watch dev --continue",
+    "dev": "turbo dev --continue",
     "format": "turbo run format --continue -- --cache --cache-location .cache/.prettiercache",
     "format:fix": "turbo run format --continue -- --write --cache --cache-location .cache/.prettiercache",
     "postinstall": "bun lint:ws",
