feat(bun): use new catalog config

--- a/package.json
+++ b/package.json
@@ -4,14 +4,40 @@
   "private": true,
   "description": "Clean and typesafe starter monorepo using Turborepo along with React and tRPC ",
   "license": "MIT",
-  "workspaces": [
-    "apps/*",
-    "packages/*",
-    "tooling/*"
-  ],
+  "workspaces": {
+    "packages": [
+      "apps/*",
+      "packages/*",
+      "tooling/*"
+    ],
+    "catalog": {
+      "zod": "^3.25.20"
+    },
+    "catalogs": {
+      "react": {
+        "react": "19.0.0",
+        "react-dom": "19.0.0",
+        "@types/react": "19.1.5",
+        "@types/react-dom": "^19.1.5"
+      },
+      "trpc": {
+        "@tanstack/react-query": "^5.76.1",
+        "@trpc/client": "^11.1.2",
+        "@trpc/tanstack-react-query": "^11.1.2",
+        "@trpc/server": "^11.1.2",
+        "superjson": "^2.2.2"
+      },
+      "tool": {
+        "eslint": "^9.27.0",
+        "prettier": "^3.5.3",
+        "tailwindcss": "^4.1.7",
+        "typescript": "^5.8.3"
+      }
+    }
+  },
   "scripts": {
     "build": "turbo run build",
-    "bump-deps": "bunx --bun npm-check-updates --deep -u '/^(?!react).*$/' && bun install",
+    "bump-deps": "bunx --bun npm-check-updates --deep -u && bun install",
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo run clean",
     "db:push": "turbo -F @yuki/db db:push",
@@ -33,9 +59,9 @@
     "@yuki/tsconfig": "workspace:*",
     "turbo": "^2.5.3"
   },
-  "packageManager": "bun@1.2.0",
+  "packageManager": "bun@1.2.14",
   "engines": {
-    "bun": ">=1.2.0",
+    "bun": ">=1.2.14",
     "node": ">=22.0.0"
   }
 }
