--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -21,14 +21,14 @@
   "prettier": "@yuki/prettier-config",
   "dependencies": {
     "@t3-oss/env-core": "^0.13.4",
-    "zod": "^3.25.17"
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@yuki/eslint-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
     "@yuki/tsconfig": "workspace:*",
-    "eslint": "latest",
-    "prettier": "latest",
-    "typescript": "latest"
+    "eslint": "catalog:tool",
+    "prettier": "catalog:tool",
+    "typescript": "catalog:tool"
   }
 }
