--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,7 +17,8 @@
       "types": "./dist/hooks/*.d.ts",
       "default": "./src/hooks/*.ts"
     },
-    "./tailwind.css": "./src/tailwind.css"
+    "./tailwind.css": "./src/tailwind.css",
+    "./postcss": "./postcss.config.js"
   },
   "scripts": {
     "build": "tsc",
@@ -36,7 +37,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
-    "react": "19.0.0",
+    "react": "catalog:react",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0"
   },
@@ -44,10 +45,11 @@
     "@yuki/eslint-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
     "@yuki/tsconfig": "workspace:*",
-    "eslint": "latest",
-    "prettier": "latest",
-    "tailwindcss": "latest",
+    "eslint": "catalog:tool",
+    "postcss": "^8.5.3",
+    "prettier": "catalog:tool",
+    "tailwindcss": "catalog:tool",
     "tw-animate-css": "^1.3.0",
-    "typescript": "latest"
+    "typescript": "catalog:tool"
   }
 }
