--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -48,7 +48,7 @@
     "eslint": "catalog:tool",
     "postcss": "^8.5.3",
     "prettier": "catalog:tool",
-    "tailwindcss": "catalog:tool",
+    "tailwindcss": "catalog:tailwind",
     "tw-animate-css": "^1.3.0",
     "typescript": "catalog:tool"
   }
