--- a/apps/native/tsconfig.json
+++ b/apps/native/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "extends": "@yuki/tsconfig/base.json",
   "compilerOptions": {
+    "lib": ["ES2022", "dom"],
     "jsx": "react-native",
-    "checkJs": true,
     "moduleSuffixes": [".ios", ".android", ".native", ""],
+    /* Path Aliases */
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
