--- a/packages/validators/tsconfig.json
+++ b/packages/validators/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "@yuki/tsconfig/internal-package.json",
   "compilerOptions": {
-    "rootDir": "src",
-    "emitDeclarationOnly": false
+    "rootDir": "src"
   },
   "include": ["src"],
   "exclude": ["node_modules"]
