chore: minor changes

--- a/apps/nextjs/tsconfig.json
+++ b/apps/nextjs/tsconfig.json
@@ -2,7 +2,10 @@
   "extends": "@yuki/tsconfig/nextjs.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": { "@/*": ["./*"] }
+    "paths": {
+      "@/*": ["./*"],
+      "@yuki/ui/*": ["../../packages/ui/src/*"]
+    }
   },
   "include": [".", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
